--- a/src/pages/wallets/index.less
+++ b/src/pages/wallets/index.less
@@ -2,11 +2,11 @@
 
 .form {
   position: absolute;
-  top: 45%;
+  top: 50%;
   left: 50%;
-  margin: -160px 0 0 -160px;
-  width: 320px;
-  height: 320px;
+  margin: -240px 0 0 -240px;
+  width: 480px;
+  max-height: 420px;
   padding: 36px;
   box-shadow: 0 0 100px rgba(0, 0, 0, 0.08);
 
@@ -19,8 +19,14 @@
     text-align: center;
     margin-top: 16px;
     font-size: 12px;
-    display: flex;
-    justify-content: space-between;
+  }
+}
+
+.actions {
+  display: flex;
+  margin-bottom: 30px;
+  > * + * {
+    margin-left: 10px;
   }
 }
 
