Add create wallet to wallets page

--- a/src/pages/wallets/index.less
+++ b/src/pages/wallets/index.less
@@ -30,6 +30,14 @@
   }
 }
 
+.setMainBtnWrapper {
+  padding-top: 20px;
+  text-align: center;
+  > button {
+    width: 160px;
+  }
+}
+
 .logo {
   text-align: center;
   cursor: pointer;
