feat: add create wallet modal

--- a/src/pages/wallets/components/CreateWalletModal.less
+++ b/src/pages/wallets/components/CreateWalletModal.less
@@ -1,3 +1,21 @@
-.foo {
-  margin: 0 auto;
+.instru {
+  font-size: 0.9em;
+  color: #888;
+}
+
+.walletNkey {
+  margin-left: 10px;
+  label {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: -10px;
+    color: #888;
+    display: block;
+  }
+
+  .key > * {
+    white-space: pre-wrap;
+    width: 100%;
+    height: auto;
+  }
 }
