--- a/src/pages/wallets/index.less
+++ b/src/pages/wallets/index.less
@@ -2,11 +2,11 @@
 
 .form {
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   margin: -240px 0 0 -240px;
   width: 480px;
-  max-height: 420px;
+  max-height: 600px;
   padding: 36px;
   box-shadow: 0 0 100px rgba(0, 0, 0, 0.08);
 
@@ -28,6 +28,11 @@
   > * + * {
     margin-left: 10px;
   }
+}
+
+.wallets {
+  max-height: 320px;
+  overflow-y: auto;
 }
 
 .setMainBtnWrapper {
