--- a/src/pages/dashboard/index.less
+++ b/src/pages/dashboard/index.less
@@ -2,11 +2,19 @@
   position: relative;
   :global {
     .ant-card {
-      border-radius: 0;
+      border-radius: 0.625rem;
       margin-bottom: 24px;
+      box-shadow: 0 0.46875rem 2.1875rem rgba(90, 97, 105, 0.1),
+        0 0.9375rem 1.40625rem rgba(90, 97, 105, 0.1),
+        0 0.25rem 0.53125rem rgba(90, 97, 105, 0.12),
+        0 0.125rem 0.1875rem rgba(90, 97, 105, 0.1);
       &:hover {
-        box-shadow: 4px 4px 40px rgba(0, 0, 0, 0.05);
+        box-shadow: 0 0.46875rem 2.1875rem rgba(90, 97, 105, 0.2),
+          0 0.9375rem 1.40625rem rgba(90, 97, 105, 0.2),
+          0 0.25rem 0.53125rem rgba(90, 97, 105, 0.2),
+          0 0.125rem 0.1875rem rgba(90, 97, 105, 0.2);
       }
+      overflow: hidden;
     }
     .ant-card-body {
       overflow-x: hidden;
