--- a/src/themes/mixin.less
+++ b/src/themes/mixin.less
@@ -1,5 +1,6 @@
 @import '~themes/default';
 
+@cqlblue: #0053cc;
 @dark-half: #494949;
 @purple: #d897eb;
 @shadow-1: 4px 4px 20px 0 rgba(0, 0, 0, 0.01);
