--- a/src/components/WalletAvatar/WalletAvatar.less
+++ b/src/components/WalletAvatar/WalletAvatar.less
@@ -1,16 +1,12 @@
 .walletAvatar {
   display: inline-block;
+  font-family: monospace;
 
-  .seed {
-    margin-left: 10px;
-    display: inline-block;
-    font-family: monospace;
-
-    background-clip: text;
-    background-position: right;
+  .avatar {
+    margin-right: 10px;
   }
 }
-.wallet {
+.popover {
   font-family: monospace;
-  font-weight: 600;
+  font-weight: 400;
 }
