--- a/src/themes/index.less
+++ b/src/themes/index.less
@@ -79,6 +79,11 @@ body {
     padding: 12px 16px !important;
   }
 
+  .ant-tag {
+    white-space: pre-wrap;
+    max-width: 100%;
+  }
+
   .margin-right {
     margin-right: 16px;
   }
