--- a/src/pages/dashboard/index.less
+++ b/src/pages/dashboard/index.less
@@ -21,6 +21,17 @@
     }
   }
 
+  .section {
+    padding: 0 15px;
+    .sectionTitle {
+      margin-left: 10px;
+      font-size: 28px;
+      font-weight: 600;
+      margin-bottom: 10px;
+      display: block;
+    }
+  }
+
   .weather {
     &:hover {
       box-shadow: 4px 4px 40px rgba(143, 201, 251, 0.6);
@@ -31,5 +42,37 @@
     &:hover {
       box-shadow: 4px 4px 40px rgba(246, 152, 153, 0.6);
     }
+  }
+}
+
+.scanner {
+  .content {
+    font-weight: 600;
+    text-align: center;
+    font-size: 1.6rem;
+    line-height: 1.2rem;
+    img {
+      width: 80%;
+    }
+    .sub {
+      color: #333;
+      margin-top: 5px;
+      font-size: 1rem;
+    }
+    position: relative;
+    z-index: 2;
+  }
+  &::after {
+    content: '';
+    background-image: url('../../../public/text-bg.png');
+    background-size: cover;
+    background-position: left;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    right: 0;
+    top: 0;
+    opacity: 0.75;
+    z-index: 1;
   }
 }
