feat: mock project menu

--- a/src/themes/mixin.less
+++ b/src/themes/mixin.less
@@ -20,7 +20,7 @@
     linear,
     37.219838% 34.532506%,
     36.425669% 93.178216%,
-    from(#29cdff),
+    from(#03a9f4),
     to(#0a60ff),
     color-stop(0.37, #148eff)
   );
