--- a/src/components/Layout/Sider.less
+++ b/src/components/Layout/Sider.less
@@ -14,7 +14,7 @@
 
 .brand {
   z-index: 1;
-  height: 72px;
+  height: @header-height;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -26,7 +26,7 @@
     justify-content: center;
 
     img {
-      width: 36px;
+      width: 32px;
       margin-right: 8px;
     }
 
