--- a/src/themes/mixin.less
+++ b/src/themes/mixin.less
@@ -8,6 +8,7 @@
 @transition-ease-in: all 0.3s ease-out;
 @transition-ease-out: all 0.3s ease-out;
 @ease-in: ease-in;
+@header-height: 60px;
 
 .text-overflow {
   white-space: nowrap;
