feat: topup project

--- a/src/pages/dashboard/components/Projects.less
+++ b/src/pages/dashboard/components/Projects.less
@@ -36,14 +36,14 @@
   .name {
     padding: 20px 10px 10px;
     display: flex;
-    justify-content: space-between;
     align-content: center;
 
     .avatar {
       border: solid 2px #fcfcfc;
+      min-width: 48px;
     }
     .alias {
-      width: 70%;
+      margin-left: 15px;
       font-size: 1rem;
       font-weight: 600;
       padding: 12px 0;
