--- a/src/pages/project/$db/db.less
+++ b/src/pages/project/$db/db.less
@@ -1,9 +1,20 @@
 .tables {
+  .table {
+    margin-bottom: 20px;
+  }
   .tableName {
     font-size: 1.5em;
     margin-bottom: 15px;
   }
 }
 .create {
+  width: 80%;
+  padding: 20px;
+  background: #efefef;
+  border-radius: 10px;
   margin-top: 30px;
+}
+.props {
+  margin-top: 2em;
+  font-size: 8px;
 }
