--- a/src/pages/project/$db/db.less
+++ b/src/pages/project/$db/db.less
@@ -3,9 +3,13 @@
     margin-bottom: 20px;
   }
   .tableName {
-    font-size: 1.5em;
     margin-bottom: 15px;
   }
+}
+.title {
+  font-size: 16px;
+  font-weight: 600;
+  margin-bottom: 15px;
 }
 .create {
   width: 80%;
