--- a/examples/cql-github-oauth/src/App.css
+++ b/examples/cql-github-oauth/src/App.css
@@ -10,7 +10,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 50vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,8 +21,15 @@
 
 .login-button {
   padding: 10px 20px;
+  /* background: #fefefe; */
+  /* border: solid 1px #666; */
   border-radius: 5px;
+  text-decoration: none;
+  color: #888;
   cursor: pointer;
+}
+.login-button:hover {
+  background: #eee;
 }
 
 .App-link {
