--- a/src/pages/project/$db/auth.less
+++ b/src/pages/project/$db/auth.less
@@ -1,8 +1,10 @@
 .title {
   font-size: 16px;
   font-weight: 600;
-  margin-top: 10px;
   margin-bottom: 15px;
+}
+.users {
+  margin-top: 30px;
 }
 .props {
   margin-top: 2em;
