chore: styling of callback page

--- a/src/pages/callback/index.less
+++ b/src/pages/callback/index.less
@@ -10,17 +10,13 @@
   padding: 36px;
   box-shadow: 0 0 100px rgba(0, 0, 0, 0.08);
 
-  button {
-    width: 100%;
+  padding-top: 100px;
+  text-align: center;
+  .loading {
+    font-size: 24px;
   }
-
-  p {
-    color: rgb(204, 204, 204);
-    text-align: center;
-    margin-top: 16px;
-    font-size: 12px;
-    display: flex;
-    justify-content: space-between;
+  h3 {
+    margin-top: 20px;
   }
 }
 
