feat(user detail): add user detail page and route, resolve a lot of jslint warnings

--- a/src/themes/index.less
+++ b/src/themes/index.less
@@ -16,6 +16,12 @@ body {
 }
 
 :global {
+  .debug {
+    margin-top: 2em;
+    font-size: 8px;
+    display: none;
+  }
+
   .ant-breadcrumb {
     & > span {
       &:last-child {
