--- a/src/pages/request/index.less
+++ b/src/pages/request/index.less
@@ -1,7 +1,7 @@
 @import '~themes/vars';
 
 .result {
-  height: 600px;
+  max-height: 600px;
   width: 100%;
   background: @hover-color;
   border-color: #ddd;
@@ -13,6 +13,8 @@
 }
 
 .requestList {
+  max-height: 600px;
+  overflow: scroll;
   padding-right: 24px;
   margin-bottom: 24px;
   .listItem {
